исправление тестов